# llm-personality-axes

./: .gitignore  README.md  pyproject.toml
artifacts/directions/: llama_last_token.pt  llama_response_mean.pt  qwen_last_token.pt  qwen_response_mean.pt
artifacts/evaluations/: direction_eval_llama_last_token.pt  direction_eval_llama_response_mean.pt  direction_eval_qwen_last_token.pt  direction_eval_qwen_response_mean.pt  intervention_responses.json  intervention_scores.json
artifacts/responses/: qwen_responses.json
data/: contrastive_examples.json
docs/findings/: activation-capping.md  additive-steering.md  direction-discovery.md  phase2-assistant-axis.md  phase2-direction-discovery.md  phase3-steering.md  phase4-capping.md  phase4-clamping.md  phase4-v2-capping.md  phase4b-multilayer-capping.md  phase4b-multilayer-clamping.md
docs/plans/: 2025-01-19-phase1-infrastructure-design.md
scripts/: compute_direction.py  evaluate_capping.py  evaluate_steering.py  evaluate_with_llm.py  example_capped_model.py  find_direction.py  generate_data.py  generate_figures.py  run_anthropic_style_capping.py  run_anthropic_style_clamping.py  run_capping.py  run_capping_bare.py  run_clamping.py  run_clamping_bare.py  run_intervention_experiments.py  run_multilayer_capping.py  run_multilayer_clamping.py  run_phase2.py  run_phase3.py  run_phase3_extended.py  test_capping_v2.py  test_steering.py  verify_extraction.py
src/assistant_axes/: __init__.py  capped_model.py  contrastive.py  direction.py  extract.py  model.py  steering.py  utils.py
src/assistant_axes/data/: personas.py  (+1 more)
