[project]
name = "assistant-axes"
version = "0.1.0"
description = "Replicating and extending assistant axis interpretability research"
requires-python = ">=3.11"
dependencies = [
    "transformer-lens>=2.0",
    "torch>=2.0",
    "transformers",
    "accelerate",
    "safetensors",
    "einops",
    "jaxtyping",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assistant_axes"]
